Refactor & Test: Customer DeleteAll 메서드 리턴 타입 변경 및 테스트 수정